--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/react-facebook-login": "^4.1.5"
   }
 }
